Adding block with backgroung image

--- a/web/themes/custom/new_structure_takeda/scss/mixins.scss
+++ b/web/themes/custom/new_structure_takeda/scss/mixins.scss
@@ -16,3 +16,19 @@ $value in $theme-colors {
         @include button-outline-variant($value);
     }
 }
+
+@mixin small-mobile{
+    @media (max-width: 575px) { @content; }
+}
+@mixin mobile {
+    @media(min-width: 576px) { @content; }
+}
+@mixin tablet {
+    @media(min-width: 768px) { @content; }
+}
+@mixin desktop {
+    @media(min-width: 992px) { @content; }
+}
+@mixin large-desktop {
+    @media(min-width: 1200px) { @content; }
+}
