--- a/web/themes/custom/new_structure_takeda/scss/typography.scss
+++ b/web/themes/custom/new_structure_takeda/scss/typography.scss
@@ -1,5 +1,20 @@
 /* TYPOGRAPHY */
-
+@font-face{
+    font-family: 'PraxisLTBold';
+    src: url('../fonts/PraxisLTBold/PraxisLTBold.TTF')
+}
+@font-face{
+    font-family: 'PraxisLTRegular';
+    src: url('../fonts/PraxisLTRegular/PraxisLTRegular.TTF')
+}
+@font-face{
+    font-family: 'PraxisLTLight';
+    src: url('../fonts/PraxisLTLight/PraxisLTLight.TTF')
+}
+@font-face{
+    font-family: 'PraxisLTSemibold';
+    src: url('../fonts/PraxisLTSemibold/PraxisLTSemibold.TTF')
+}
 
 /* Google Fonts */
 
