--- a/web/themes/custom/new_structure_takeda/scss/style.scss
+++ b/web/themes/custom/new_structure_takeda/scss/style.scss
@@ -5,12 +5,26 @@ Description: Bootstrap 4 with Sass
 
 // import files
 @import "import";
+// import styles for pages
+@import "pages/front-page";
+// import styles for blocks
+@import "blocks/text-with-background-image";
+@import "blocks/search";
+@import "blocks/tools";
+@import "blocks/first-sidebar";
+
 
 /* GENERAL STYLES
 -------------------------------------------------*/
 
 body {
     background: $white;
+    font-family: 'PraxisLTLight';
+}
+.container-fluid{
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+
 }
 
 
