--- a/web/themes/custom/new_structure_takeda/scss/style.scss
+++ b/web/themes/custom/new_structure_takeda/scss/style.scss
@@ -12,6 +12,7 @@ Description: Bootstrap 4 with Sass
 @import "blocks/search";
 @import "blocks/tools";
 @import "blocks/first-sidebar";
+@import "blocks/find-resources";
 
 
 /* GENERAL STYLES
