Takeda logo add and delete needless blocks

--- a/web/themes/custom/new_structure_takeda/scss/style.scss
+++ b/web/themes/custom/new_structure_takeda/scss/style.scss
@@ -13,6 +13,7 @@ Description: Bootstrap 4 with Sass
 @import "blocks/tools";
 @import "blocks/first-sidebar";
 @import "blocks/find-resources";
+@import "blocks/content-add";
 
 
 /* GENERAL STYLES
