Creating block with landing pages

--- a/web/themes/custom/new_structure_takeda/scss/style.scss
+++ b/web/themes/custom/new_structure_takeda/scss/style.scss
@@ -15,6 +15,7 @@ Description: Bootstrap 4 with Sass
 @import "blocks/find-resources";
 @import "blocks/content-add";
 @import "blocks/footer";
+@import "blocks/choose_a_therapeutic_area";
 
 
 /* GENERAL STYLES
