--- a/web/themes/custom/new_structure_takeda/templates/custom_templates/_takeda-landings.html.twig
+++ b/web/themes/custom/new_structure_takeda/templates/custom_templates/_takeda-landings.html.twig
@@ -3,7 +3,7 @@
             <div class="container">
             <!--                        Oncology block                  -->
                 <div class="landing col-lg-3 col-md-6 col-sm-6 col-12">
-                    <h3 class="landing-title">{{ 'Oncology'|t }}</h3>
+                    <h3 id="oncology" class="landing-title">{{ 'Oncology'|t }}</h3>
                     <div class="landing-sites closed">
                         <div id="mm-hcp" class="site-name"><a href="http://takeda-oncology.takeda.antosh.co/mm/en/hcp-login" >{{ 'Multiple Myeloma'|t }}</a></div>
                         <div id="hl-hcp" class="site-name"><a href="http://takeda-oncology.takeda.antosh.co/hl/hcp-login" >{{ 'Hodkin’s Lymphoma'|t }}</a></div>
@@ -12,7 +12,7 @@
                 </div>
                 <!--                 Gastroenterology block                  -->
                 <div class="landing col-lg-3 col-md-6 col-sm-6 col-12">
-                        <h3 class="landing-title">{{ 'Gastro- <br/> enterology'|t }}</h3>
+                        <h3 id="gastro" class="landing-title">{{ 'Gastro- <br/> enterology'|t }}</h3>
                     <div class="landing-sites closed">
                         <div id="alofisel" class="site-name"><a href="{{ url('<front>') }}" >{{ 'Complex Perianal Fistulae'|t }} </a></div>
                         <div id="entyvio" class="site-name"><a href="{{ url('<front>') }}" >{{ 'Inflammaroty Bowel Disease'|t }}</a></div>
@@ -20,7 +20,7 @@
                 </div>
                 <!--                   Rare Disease block                    -->
                 <div class="landing col-lg-3 col-md-6 col-sm-6 col-12">
-                        <h3 class="landing-title">{{ 'Rare <br /> diseases'|t }}</h3>
+                        <h3 id="rare-diseases" class="landing-title">{{ 'Rare <br /> diseases'|t }}</h3>
                     <div class="landing-sites closed">
                         <div class="site-description">{{ 'Immunology & HAE'|t }}</div>
                             <div id="hae" class="site-name"><a href="{{ url('<front>') }}" >{{ 'Hereditary angioedema (HAE)'|t }}</a></div>
@@ -32,7 +32,7 @@
                 </div>
                 <!--                 General Practice block                  -->
                 <div class="landing col-lg-3 col-md-6 col-sm-6 col-12">
-                        <h3 class="landing-title">{{ 'General <br />practice'|t }}</h3>
+                        <h3 id="general-practional" class="landing-title">{{ 'General <br /> practice'|t }}</h3>
                     <div class="landing-sites closed">
                         <div id="reflux" class="site-name"><a href="http://reflux.takeda.antosh.co/de/hcp-login" >{{ 'Reflux'|t }}</a></div>
                     </div>
