--- a/web/themes/custom/new_structure_takeda/scss/pages/_front-page.scss
+++ b/web/themes/custom/new_structure_takeda/scss/pages/_front-page.scss
@@ -5,6 +5,85 @@
     display: none;
 }
 
+$min-value-phone: 575;
+@for $i from 0 through 70{
+    $value: $min-value-phone - (3*$i);
+    @media  only screen and (max-width: #{$value}px){
+        #block-choose-a-therapeutic-area{
+            top: -50px - $i;
+            position: relative;
+        }
+        #block-find-resources {
+            top: -57px - $i;
+            position: relative;
+        }
+    }
+}
+
+$min-value: 768;
+@for $i from 1 to 27 {
+    $value: (2*$i)+$min-value;
+    @if ($value<842) {
+        @media  only screen and (min-width: #{$value}px){
+            #block-choose-a-therapeutic-area{
+                top: -208px + $i;
+                position: relative;
+            } 
+            #block-find-resources {
+                top: -219px + $i;
+                position: relative;
+            }
+        }
+    } 
+}
+$min-value-tablet: 850;
+@for $i from 0 to 150 {
+    $value: (2*$i) + $min-value-tablet;
+    @if ($value<992) {
+            @media  only screen and (min-width: #{$value}px){
+                #block-choose-a-therapeutic-area{
+                    top: -185px + $i;
+                    position: relative;
+                }
+                #block-find-resources {
+                    top: -196px + $i;
+                    position: relative;
+                }
+
+            }
+    }
+}
+@media only screen and (min-width: 992px){
+    #block-choose-a-therapeutic-area{
+        top: -288px;
+        position: relative;
+        .container{
+            max-width: 1140px;
+        }
+    }
+    
+    #block-find-resources {
+        top: -292px;
+        position: relative;
+        &.container{
+            max-width: 1021px;
+        }
+    }
+} 
+$min-value-desktop: 1063;
+@for $i from 0 to 70 {
+    $value: (2*$i) + $min-value-desktop;
+        @media only screen and (min-width: #{$value}px){
+            #block-choose-a-therapeutic-area{
+                top: -288px + $i;
+                position: relative;
+            }
+            #block-find-resources {
+                top: -292px + $i;
+                position: relative;
+            }
+        }
+}
 
 /*
 #main-wrapper
