Default open dropdown menu

--- a/web/themes/custom/new_structure_takeda/scss/style.scss
+++ b/web/themes/custom/new_structure_takeda/scss/style.scss
@@ -21,7 +21,9 @@ Description: Bootstrap 4 with Sass
 
 /* GENERAL STYLES
 -------------------------------------------------*/
- 
+html{
+    overflow-x: hidden;
+} 
 
 body {
     background: $white;
