--- a/web/themes/custom/new_structure_takeda/templates/custom_templates/_takeda-landings.html.twig
+++ b/web/themes/custom/new_structure_takeda/templates/custom_templates/_takeda-landings.html.twig
@@ -1,41 +1,44 @@
     <div class="takeda-sites">
         <h2 class="block-title">{{ 'Choose a therapeutic area'|t }}</h2>
             <div class="container">
+            
             <!--                        Oncology block                  -->
-                <div class="landing col-lg-3 col-md-6 col-sm-6 col-12">
-                    <h3 id="oncology" class="landing-title">{{ 'Oncology'|t }}</h3>
-                    <div class="landing-sites closed">
-                        <div id="mm-hcp" class="site-name"><a href="http://takeda-oncology.takeda.antosh.co/mm/en/hcp-login" >{{ 'Multiple Myeloma'|t }}</a></div>
-                        <div id="hl-hcp" class="site-name"><a href="http://takeda-oncology.takeda.antosh.co/hl/hcp-login" >{{ 'Hodkin’s Lymphoma'|t }}</a></div>
-                        <div id="alunbrig" class="site-name"><a href="{{ url('<front>') }}" >{{ 'ALK+ NSCLC'|t }}</a></div>
+                <div id="onco-landing" class="landing col-lg-3 col-md-6 col-sm-6 col-12">
+                    <h3 id="oncology" class="landing-title active-landing">{{ 'Oncology'|t }}</h3>
+                    <div class="landing-sites">
+                        <div id="mm-hcp" class="site-name"><a href="http://takeda-oncology.takeda.antosh.co/mm/en" >{{ 'Multiple Myeloma'|t }}</a></div>
+                        <div id="hl-hcp" class="site-name"><a href="http://takeda-oncology.takeda.antosh.co/hl" >{{ 'Hodkin’s Lymphoma'|t }}</a></div>
+                        <div id="alunbrig" class="site-name"><a href="http://takeda-oncology.takeda.antosh.co/ALKNSCLC/" >{{ 'ALK+ NSCLC'|t }}</a></div>
                     </div>
                 </div>
                 <!--                 Gastroenterology block                  -->
-                <div class="landing col-lg-3 col-md-6 col-sm-6 col-12">
-                        <h3 id="gastro" class="landing-title">{{ 'Gastro- <br/> enterology'|t }}</h3>
-                    <div class="landing-sites closed">
-                        <div id="alofisel" class="site-name"><a href="{{ url('<front>') }}" >{{ 'Complex Perianal Fistulae'|t }} </a></div>
-                        <div id="entyvio" class="site-name"><a href="{{ url('<front>') }}" >{{ 'Inflammaroty Bowel Disease'|t }}</a></div>
+                <div id="gastro-landing" class="landing col-lg-3 col-md-6 col-sm-6 col-12">
+                        <h3 id="gastro" class="landing-title active-landing">{{ 'Gastro- <br/> enterology'|t }}</h3>
+                    <div class="landing-sites">
+                        <div id="alofisel" class="site-name"><a href="http://takeda-gastroenterology.takeda.antosh.co/alofisel/" >{{ 'Complex Perianal Fistulae'|t }} </a></div>
+                        <div id="entyvio" class="site-name"><a href="http://takeda-gastroenterology.takeda.antosh.co/entyvio/" >{{ 'Inflammaroty Bowel Disease'|t }}</a></div>
                     </div>
                 </div>
+            
                 <!--                   Rare Disease block                    -->
-                <div class="landing col-lg-3 col-md-6 col-sm-6 col-12">
-                        <h3 id="rare-diseases" class="landing-title">{{ 'Rare <br /> diseases'|t }}</h3>
-                    <div class="landing-sites closed">
+                <div id="rare-landing" class="landing col-lg-3 col-md-6 col-sm-6 col-12">
+                        <h3 id="rare-diseases" class="landing-title active-landing">{{ 'Rare <br /> diseases'|t }}</h3>
+                    <div class="landing-sites">
                         <div class="site-description">{{ 'Immunology & HAE'|t }}</div>
                             <div id="hae" class="site-name"><a href="{{ url('<front>') }}" >{{ 'Hereditary angioedema (HAE)'|t }}</a></div>
                         <div class="site-description">{{ 'Haematology'|t }}</div>
                             <div id="hemo" class="site-name"><a href="{{ url('<front>') }}" >{{ 'Hemophilia A'|t }}</a></div>
                         <div class="site-description">{{ 'Rare metabolic diseases'|t }}</div>
-                            <div id="mf" class="site-name"><a href="{{ url('<front>') }}" >{{ 'Morbus Fabry'|t }}</a></div>
+                            <div id="mf" class="site-name"><a href="{{ url('<front>') }}" onclick="return false">{{ 'Morbus Fabry'|t }}</a></div>
                     </div>
                 </div>
                 <!--                 General Practice block                  -->
-                <div class="landing col-lg-3 col-md-6 col-sm-6 col-12">
-                        <h3 id="general-practional" class="landing-title">{{ 'General <br /> practice'|t }}</h3>
-                    <div class="landing-sites closed">
-                        <div id="reflux" class="site-name"><a href="http://reflux.takeda.antosh.co/de/hcp-login" >{{ 'Reflux'|t }}</a></div>
+                <div id="gr-landing" class="landing col-lg-3 col-md-6 col-sm-6 col-12">
+                        <h3 id="general-practional" class="landing-title active-landing">{{ 'General <br /> practice'|t }}</h3>
+                    <div class="landing-sites">
+                        <div id="reflux" class="site-name"><a href="http://reflux.takeda.antosh.co/" >{{ 'Reflux'|t }}</a></div>
                     </div>
                 </div>
+
             </div>    
     </div> 
